    ones
  * pglcmd cron and pgld logrotate: suppress STDOUT
  * pglcmd *stats:
    - only execute as root
    - shortened sleep time between signal and logfile parsing from 5 to 1
      seconds
  * use http://www.iblocklist.com/lists.xml to determine the user friendly
    blocklist names for iblocklist.com URLs instead of hardcoding them.

-- jre <jre-phoenix@users.sourceforge.net>  Wed, 20 Apr 2011 14:13:36 +0200

pgl 2.0.4

  [ jre ]
  * internal LSB init-functions:
    - updated based on Debian's 3.2-27
    - use start-stop-daemon if available
    - removed obsolete check for -p --> -p guarding p2p
  * Makefile:
    - removed "clean" from "dist" target - unnecessary
    - only add GUI code to dist, if MAKE_PGLGUI is yes
    - use generic RELEASEFILE name, depending on MAKE_PGLGUI
  * fixed automatic whitelisting of local FORWARD traffic. Now really Closes SF
    Bug #3057107. Thx athanasius!
  * extended kernel module loading
  * iptables handling:
    - fixed: check for already whitelisted LAN now copes with all subnetmasks
    - improved logging
    - be more verbose on iptables insertion
    - minor bugfixes
    - execute old iptables remove script on start in case it still exists (it
      shouldn't!)
  * blocklist management:
    - also merge the local blocklists in MASTER_BLOCKLIST (next to the
      automatically handled remote blocklists). pgld only loads this list.
      - fixes handling of removed/added/changed local blocklists
      - quicker "reload", but excess usage of harddisk space
      - simplified code and output of test_ipblocking
    - local blocklists mustn't have space in their names any more!
    - added option force-restart, that forces to rebuild master blocklist. Added
      documentation for force-reload and force-update.
  * fixed use of pglcmd option #1 ($1) in pglcmd.lib
  * code cleanups:
    - use a separate variable for the IPv4 regular expression
    - moved LIST_NAME2LIST_URL from pglcmd.lib to debian/postinst