@@ -24,11 +24,11 @@
 
 .SH SYNOPSIS
 .B pgld
-[\fI\-d\fR] [\fI\-s\fR] [\fI\-l LOGFILE\fR] [\fI\-c CHARSET\fR] [\fI\-p
-PIDFILE\fR] [\fI\-a MARK\fR] [\fI\-r MARK\fR] [\fI\-q 0-65535\fR] BLOCKLIST(S)
+[\fI\-s\fR] [\fI\-l LOGFILE\fR] [\fI\-d\fR] [\fI\-c CHARSET\fR] [\fI\-p
+PIDFILE\fR] [\fI\-q 0-65535\fR] [\fI\-r MARK\fR] [\fI\-a MARK\fR] BLOCKLIST(S)
 .PP
 .B pgld
-\-m [\fIBLOCKLIST(S)\fR]
+[\fI\-c CHARSET\fR] \-m [\fIBLOCKLIST(S)\fR]
 .PP
 .B pglcmd
 OPTION
