@@ -42,6 +42,8 @@ pgl 2.1.0~pre1 The GUI release!
       seconds
   * use http://www.iblocklist.com/lists.xml to determine the user friendly
     blocklist names for iblocklist.com URLs instead of hardcoding them.
+  * pgld:
+    - enabled charset selection also in LOWMEM
 
 -- jre <jre-phoenix@users.sourceforge.net>  Wed, 20 Apr 2011 14:13:36 +0200
 
